# Full-stack-app-phase2

./: .env.local  Dockerfile.python  QWEN.md  README.md  check_users.py  db_schema_check.py  db_test.py  debug_backend.py  debug_json_parsing.js  debug_server.py  docker-compose.yaml  final_test.py  final_test_chatbot.py  final_test_clean.py  final_verification.py  gemini_agent.py  minimal_backend.py  package-lock.json  package.json  quick_test.py  requirements.txt  run_backend.py  run_debug_server.py  run_with_output.py  server.py  simple_run_backend.py  simple_task_test.py  simple_task_test_delayed.py  start_backend.py  start_neon_backend.py  task_creation_test.py  test_api_route.py  test_auth.py  test_auth_service.py  test_backend.py  test_backend_startup.py  test_chatbot.py  test_chatbot_api.py  test_chatbot_comprehensive.py  test_chatbot_functionality.py  (+16 more)
.next/: trace
backend/: .env  Dockerfile  __main__.py  debug_auth.py  debug_auth_foreground.py  debug_server.py  debug_task.py  minimal_main.py  python_agent_service.py  requirements.txt  server.py  simple_python_agent_service.py  test_auth.py  test_debug.py  test_jwt.py  todo_app.db
backend/src/: config.py  database.py  main.py  models.py  pyproject.toml  run_local.py  run_server.py  simple_server.py  todo_app.db
backend/src/api/: deps.py
backend/src/api/v1/: auth.py  chat.py  health.py  tasks.py
backend/src/models/: __init__.py  task.py  user.py
backend/src/schemas/: auth.py
backend/src/services/: auth_service.py  task_service.py
backend/src/utils/: exceptions.py  logging.py
frontend/: Dockerfile  (+3 more)
(+110 files in other folders)
